Correccion en DTO marca y ciudad